welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: ')' expected but ',' found.
  if (a<=19, a>=13) {
           ^hasTeen:9: error: illegal start of simple expression
} 
^